# modpacker

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  examplemod.json  profile.profile
assets/indexes/: 1.16.json
installations/1.12.2/: version_info.json
installations/1.16.1/: version_info.json
src/: .mc_install.rs.rustfmt  data.rs  downloader.rs  launcher.rs  main.rs  mc_data.rs  types.rs
